subiendo primeros cambios

--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
+  <head><!--este es un comentario-->
     <title>Prueba HTML 5 -estructura 1</title>
   </head>
   
