AVANCE CON ETIQUETAS

--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,17 +1,30 @@
+<!-- EL DOCTYPE HTML INDICA AL NAVEGADOR EL TIPO DE DOCUMETO QUE UTILIZAMOS -->
 <!DOCTYPE HTML>
+<!-- LA ETIQUETA HTML INDICA EL INICIO Y FINAL DEL DOCUMENTO -->
 <html>
-  <head><!--este es un comentario-->
+  <!-- LA ETIQUETA HEAD ES LA CABEZA DEL DOCUMENTO HTML CONTIENE INFORMACION QUE NO SE MUESTRA, COMO EL TITULO, ENLACES CSS Y JAVASCRIPT, IDIOMA DEL HTML, ETC. SIRVEN PARA EL FUNCIONAMIENTO Y OPTIMIZACION DE MOTORES DE BUSQUEDA. -->
+  <head>
+    <!-- LA ETIQUETA TITLE SIRVE PARA DARLE UN TITULO AL DOCUMENTO HTML, SE MUESTRA EN LA PESTAÑA DEL NAVEGADOR Y SE UTILIZA EN LOS MOTORES DE BUSQUEDA U OPTIMIZACION DEL SEO. -->
     <title>Prueba HTML 5 -estructura 1</title>
   </head>
-  
+
+  <!-- EL BODY ES EL CUERPO DE NUESTRO HTML Y CONTIENE TODO LO QUE DESEAMOS MOSTRAR EN LA PAGINA WEB COMO IMAGENES, TEXTOS, VIDEOS, ETC. -->
   <body>
+    <!-- LA ETIQUETA HEADER ES EL ENCABEZADO VA DENTRO DEL BODY Y SE UTILIZA PARA PROPORCIONAR INFORMACION IMPORTANTE Y RELEVANTE SOBRE EL CONTENIDO DE LA PAGINA WEB -->
     <header>
+      <!-- LAS ETIQUETAS H1 HASTA LA H6, SON PARA DEFINIR TITULOS CON LA H1 Y SUBTITULOS CON LA H2 HASTA LA H6, AYUDA A ORGANIZAR LA JERARQUIA DEL CONTENIDO DE LA PAGINA -->
       <h1>Página en HTML 5</h1>
       <h2>Subtítulo de la página</h2>
     </header>
 
+    <!-- LA ETIQUETA NAV ES PARA DEFINIR UNA SECCIÓN DE NAVEGACION, LA CUAL INCLUIRA ENLACES DE NAVEGACION A OTRAS PAGINAS O SECCIONES DEL SITIO -->
     <nav> 
-      <p><a href="#">Enlace 1</a></p>
+      
+      <!-- LA ETIQUETA P ES PARA DEFINIR PARRAFOS, LOS MOTORES DE BUSQUEDA UTILIZAN EL CONTENIDO PARA INDEXAR EL CONTENIDO DE LA PAGINA WEB -->
+      <p>
+        <!-- LA ETIQUETA A SIRVE PARA DEFINIR UN ENLACE O HIPERVINCULO A OTRAS PAGINAS O RECURSOS DE LA MISMA YA SEAN EXTERNOS O INTERNOS, Y SIEMPRE VA ACOMPAÑADA DE UN ATRIBUTO HREF QUE ESPECIFICA LA URL DEL ENLACE -->
+        <a href="#">Enlace 1</a>
+      </p>
       <p><a href="#">Enlace 2</a></p>
       <p><a href="#">Enlace 3</a></p>
       <p><a href="#">Enlace 4</a></p>
