--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML> <!--hace referencia al lenguaje en el que está configurado el texto -->
-<html> (Define todo el documento de una página se abre al inicio y se cierra en la última línea. )
+<html> <!--Define todo el documento de una página se abre al inicio y se cierra en la última línea.-->
 <head> (parte superior de apertura del documento HTML, es donde podremos indicar los metadatos: título del documento, hojas de estilos, javaScript, CSS…)
 <title>Prueba HTML 5 -estructura 1</title> (define el título del documento que se muestra en un browser la barra de título o la pestaña de una página. Solo contiene texto)
 
