--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML> <!--hace referencia al lenguaje en el que está configurado el texto -->
 <html> <!--Define todo el documento de una página se abre al inicio y se cierra en la última línea.-->
-<head> (parte superior de apertura del documento HTML, es donde podremos indicar los metadatos: título del documento, hojas de estilos, javaScript, CSS…)
-<title>Prueba HTML 5 -estructura 1</title> (define el título del documento que se muestra en un browser la barra de título o la pestaña de una página. Solo contiene texto)
+<head> <!--parte superior de apertura del documento HTML, es donde podremos indicar los metadatos: título del documento, hojas de estilos, javaScript, CSS-->
+<title>Prueba HTML 5 -estructura 1</title> <!--define el título del documento que se muestra en un browser la barra de título o la pestaña de una página. Solo contiene texto-->
 
-</head> (parte superior de cierre del documento HTML)
-<body>  indica donde empieza el contenido visible del documento.
+</head> <!--parte superior de cierre del documento HTML-->
+<body>  <!--indica donde empieza el contenido visible del documento-->
 <header>
   <h1>Página en HTML 5</h1>
   <h2>Subtítulo de la página</h2>
 </header>
-<nav> (<nav> representa una sección de una página cuyo propósito es proporcionar enlaces de navegación de apertura y cierre)
-<p><a href="#">Enlace 1</a></p> (<a> </a> Es una etiqueta que nos ayuda a poder crear un enlace a una página web. El atributo principal de la etiqueta HTML es href)
-<p><a href="#">Enlace 2</a></p> (<p> </p> Etiqueta Determina el inicio y fin de cada párrafo para que en tu página web el texto no aparezca en solo un bloque. )
+<nav> <!--<nav> representa una sección de una página cuyo propósito es proporcionar enlaces de navegación de apertura y cierre-->
+<p><a href="#">Enlace 1</a></p> <!--<a> </a> Es una etiqueta que nos ayuda a poder crear un enlace a una página web. El atributo principal de la etiqueta HTML es href-->
+<p><a href="#">Enlace 2</a></p> <!--<p> </p> Etiqueta Determina el inicio y fin de cada párrafo para que en tu página web el texto no aparezca en solo un bloque-->
 <p><a href="#">Enlace 3</a></p>
 <p><a href="#">Enlace 4</a></p>
-</nav> (cierre de enlace)
-<section> (representa una sección genérica de un documento. Sirve para determinar qué contenido corresponde a qué parte de un esquema.)
-  <h1>Parte principal de la página: Título</h1> (<h1> </h1> para señalar el encabezado de nivel más alto al mas bajo <h6> </h6>)
+</nav> <!--cierre de enlace-->
+<section> <!--representa una sección genérica de un documento. Sirve para determinar qué contenido corresponde a qué parte de un esquema-->
+  <h1>Parte principal de la página: Título</h1> <!--<h1> </h1> para señalar el encabezado de nivel más alto al mas bajo <h6> </h6>-->
   <h2>Subtítulo de la parte principal.</h2>
   <h3>Artículo primero</h3>
     <article>
@@ -43,22 +43,22 @@
     anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. 
     Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
     </article>
-  <br/><br/> (<br> Solo se inserta la apertura y es ideal para indicar un salto de párrafo más amplio.)
-</section> (cierre de la seccion)
-<aside> (una sección de una página que consiste en contenido que está indirectamente relacionado con el contenido principal del documento.)
-   <div id="anuncio1"> (<div> </div> elemento usado mayoritariamente para agrupar otros elementos y a estructurar el documento en secciones.)
+  <br/><br/> <!--<br> Solo se inserta la apertura y es ideal para indicar un salto de párrafo más amplio-->
+</section> <!--cierre de la seccion-->
+<aside> <!--una sección de una página que consiste en contenido que está indirectamente relacionado con el contenido principal del documento-->
+   <div id="anuncio1"> <!--<div> </div> elemento usado mayoritariamente para agrupar otros elementos y a estructurar el documento en secciones-->
       <h1>Espacio reservado para publicidad</h1>
       <h2>Anúnciate aquí</h2>
       <p>Da a conocer tu empresa o negocio en Internet anunciándote en 
       este espacio.<p>
       <p>Interesados llamar al telefono 000_000_000 ó 
       contactar en <a href="mailto: xyz@xyzmail.com">xyz@xyzmail.com</a></p>
-    </div> (<div> </div> elemento usado mayoritariamente para agrupar otros elementos y a estructurar el documento en secciones.)
-</aside> (termino de la seccion)
-<footer> (representa un pie de página para el contenido de sección más cercano o el elemento raíz de sección)
+    </div> <!--<div> </div> elemento usado mayoritariamente para agrupar otros elementos y a estructurar el documento en secciones-->
+</aside> <!--termino de la seccion-->
+<footer> <!--representa un pie de página para el contenido de sección más cercano o el elemento raíz de sección-->
    <h1>Página del manual de HTML5 por Anyelguti</h1>
    <h2>Contacta con nosotros: email <a href="mailto:aprendeweb@ymail.com">aprendeweb@ymail.com</a></h2>
-   <br/> (salto de párrafo más amplio)
-</footer> (representa un pie de página para el contenido de sección más cercano o el elemento raíz de sección)
-</body>  (indica donde termina el contenido visible del documento.)
-</html> (Define todo el documento de una página se abre al inicio y se cierra en la última línea. )
+   <br/> <!--salto de párrafo más amplio-->
+</footer> <!--representa un pie de página para el contenido de sección más cercano o el elemento raíz de sección-->
+</body>  <!--indica donde termina el contenido visible del documento-->
+</html> <!--Define todo el documento de una página se abre al inicio y se cierra en la última línea-->
