--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -5,7 +5,7 @@
 
 </head> <!--parte superior de cierre del documento HTML-->
 <body>  <!--indica donde empieza el contenido visible del documento-->
-<header>
+<header>  <!--representa un grupo de ayudas introductorias o de navegación. Puede contener un logo, un formulario de búsqueda, un nombre de autor y otros componentes-->
   <h1>Página en HTML 5</h1>
   <h2>Subtítulo de la página</h2>
 </header>
@@ -19,7 +19,7 @@
   <h1>Parte principal de la página: Título</h1> <!--<h1> </h1> para señalar el encabezado de nivel más alto al mas bajo <h6> </h6>-->
   <h2>Subtítulo de la parte principal.</h2>
   <h3>Artículo primero</h3>
-    <article>
+    <article> <!--utilizada para definir un contenido autónomo y de importancia en una página web. como: entrada de blog, una revisión, una publicación en un foro, etc-->
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
     nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
     enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis 
