--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,29 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<title>Prueba HTML 5 -estructura 1</title>
+<head><!-- Es la cabeza de la pagina web la parte superior-->
+<title>Prueba HTML 5 -estructura 1</title><!-- Es el titulo de la pagina-->
 
 </head>
-<body>
+<body><!--El cuerpo de la pagina-->
 <header>
   <h1>Página en HTML 5</h1>
   <h2>Subtítulo de la página</h2>
 </header>
 <nav> 
-<p><a href="#">Enlace 1</a></p>
+<p><a href="#">Enlace 1</a></p><!-- Links-->
 <p><a href="#">Enlace 2</a></p>
 <p><a href="#">Enlace 3</a></p>
 <p><a href="#">Enlace 4</a></p>
 </nav>
-<section>
-  <h1>Parte principal de la página: Título</h1>
-  <h2>Subtítulo de la parte principal.</h2>
-  <h3>Artículo primero</h3>
+<section><!-- secciones de la pagina-->
+  <h1>Parte principal de la página: Título</h1><!-- Primer titulo de la seccion-->
+  <h2>Subtítulo de la parte principal.</h2><!-- Subtitulo de la seccion-->
+  <h3>Artículo primero</h3><!-- tercer subtitulo de la seccion-->
     <article>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
     nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
     enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis 
-    nisl ut aliquip ex ea commodo consequat. </p>
+    nisl ut aliquip ex ea commodo consequat. </p><!-- Parrafo dentro de la seccion-->
     </article>
   <h3>Artículo segundo</h3>
     <article>
@@ -44,19 +44,19 @@
     Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
     </article>
   <br/><br/>
-</section>
+</section><!-- secciones de la pagina-->
 <aside>
-   <div id="anuncio1">
+   <div id="anuncio1"><!-- primera parte de la seccion anterior-->
       <h1>Espacio reservado para publicidad</h1>
       <h2>Anúnciate aquí</h2>
       <p>Da a conocer tu empresa o negocio en Internet anunciándote en 
-      este espacio.<p>
+      este espacio.<p><!-- parrafo-->
       <p>Interesados llamar al telefono 000_000_000 ó 
       contactar en <a href="mailto: xyz@xyzmail.com">xyz@xyzmail.com</a></p>
     </div>
 </aside>
-<footer>
-   <h1>Página del manual de HTML5 por Anyelguti</h1>
+<footer><!-- Parte final de la pagina (borde inferior)-->
+   <h1>Página del manual de HTML5 por Anyelguti</h1><!-- titulo de la parte inferior-->
    <h2>Contacta con nosotros: email <a href="mailto:aprendeweb@ymail.com">aprendeweb@ymail.com</a></h2>
    <br/>
 </footer>
