--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Prueba HTML 5 -estructura 1</title>
+<title>Prueba HTML 5 -estructura 1</title> <!-- titulo de la pagina -->
 
-</head>
-<body>
-<header>
+</head> <!-- el encabezado de la pagina -->
+<body> <!-- cuerpo de la pagina-->
+<header> <!-- encabezado donde puede ir un logo, paginas, links-->
   <h1>Página en HTML 5</h1>
   <h2>Subtítulo de la página</h2>
 </header>
-<nav> 
+<nav>  <!-- links-->
 <p><a href="#">Enlace 1</a></p>
 <p><a href="#">Enlace 2</a></p>
 <p><a href="#">Enlace 3</a></p>
@@ -59,6 +59,6 @@
    <h1>Página del manual de HTML5 por Anyelguti</h1>
    <h2>Contacta con nosotros: email <a href="mailto:aprendeweb@ymail.com">aprendeweb@ymail.com</a></h2>
    <br/>
-</footer>
+</footer> <!-- pie de pagina-->
 </body>
 </html>
