identificación de etiquetas

--- a/pagina-ejemplo.html
+++ b/pagina-ejemplo.html
@@ -1,25 +1,28 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> <!-- Declaración, no etiqueta -->
 <html>
-<head>
-<title>Prueba HTML 5 -estructura 1</title>
+<head> <!-- Porvee información general, contiene la información como el título, enlaces y otros metadatos-->
+<title>Prueba HTML 5 -estructura 1</title> <!--Título del documento, solo puede ser texto y se muestra en 
+la barra del navegador-->
 
 </head>
-<body>
-<header>
-  <h1>Página en HTML 5</h1>
+<body> <!--Representa el contenido principal del documento HTML que será desplegada en el navegador, 
+como los encabezados, textos, parráfos, imágenes, etc-->
+<header> <!--Encabezado que representa el contenido introductorio-->
+  <h1>Página en HTML 5</h1> <!--Es un encabezado que marca el título de la página web, son 6 niveles desde el
+  mas grande <h1> al mas pequeño <h6>-->
   <h2>Subtítulo de la página</h2>
 </header>
-<nav> 
-<p><a href="#">Enlace 1</a></p>
-<p><a href="#">Enlace 2</a></p>
+<nav> <!--Su propósito es proporcionar enlaces de navegación, dentro del mismo documento o a otros-->
+<p><a href="#">Enlace 1</a></p> <!-- p distribuye el texto en párrafos-->
+<p><a href="#">Enlace 2</a></p><!--a href se utiliza para insertar enlaces externos e internos en una página web-->
 <p><a href="#">Enlace 3</a></p>
 <p><a href="#">Enlace 4</a></p>
 </nav>
-<section>
+<section> <!--Sirve para agrupar temáticamente el contenido-->
   <h1>Parte principal de la página: Título</h1>
   <h2>Subtítulo de la parte principal.</h2>
   <h3>Artículo primero</h3>
-    <article>
+    <article> <!-- Contenido independiente y autónomo-->
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
     nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
     enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis 
@@ -43,10 +46,10 @@
     anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. 
     Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
     </article>
-  <br/><br/>
+  <br/><br/> <!--Salto de linea en el texto-->
 </section>
-<aside>
-   <div id="anuncio1">
+<aside> <!--Se utiliza para mostrar información que no es parte principal, sino que información adicional-->
+   <div id="anuncio1"> <!--Define las divisiones lógicas, crear secciones o agrupar contenidos--->
       <h1>Espacio reservado para publicidad</h1>
       <h2>Anúnciate aquí</h2>
       <p>Da a conocer tu empresa o negocio en Internet anunciándote en 
@@ -55,7 +58,7 @@
       contactar en <a href="mailto: xyz@xyzmail.com">xyz@xyzmail.com</a></p>
     </div>
 </aside>
-<footer>
+<footer> <!--Pie de página-->
    <h1>Página del manual de HTML5 por Anyelguti</h1>
    <h2>Contacta con nosotros: email <a href="mailto:aprendeweb@ymail.com">aprendeweb@ymail.com</a></h2>
    <br/>
