--- a/paginaweb.html
+++ b/paginaweb.html
@@ -9,23 +9,26 @@
 
 <body>
     <header>
-        <section>
-            <h1>Artículos Informáticos</h1>
-        </section>
+        <center>
+        <h1>Artículos Informáticos</h1>
+        
         <nav class="menú">
-            <ul>
-                <li id="logo">INICIO</li>
-                <li><a href="#">Marcas</a></li>
-                <li><a href="#">Notebooks</a></li>
-                <li><a href="#">Accesorios</a></li>
-                <li><a href="#">Almacenamiento</a></li>
-                <li><img src="3577005.png" width="30" height="30" alt="Logo"></li>
-            </ul>
+            <a href="index.html">Inicio</a> |
+            <a href="#">Marcas</a> |
+            <a href="#">Notebooks</a> |
+            <a href="#">Accesorios</a> |
+            <a href="#">Almacenamiento</a> |
+            <a href ="#"><img src="3577005.png" width="30" 
+            height="30" alt="Logo"></a>
         </nav>
+        </center>
         
     </header>
 
+    <center>
+
     <section>
+    <br><br>
     <table>
         <thead>
         <tr>
@@ -80,7 +83,7 @@
     <article>
     <img src="accesorios.jfif">
     </article>
-
+    </center>
     <aside>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YB4-_EMXSkE" 
@@ -88,7 +91,7 @@
         encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     </aside>
-
+    <center>
     <footer>
         <h1>Contacto</h1>
         <form name ="formulario" method="get">
@@ -108,6 +111,7 @@
             <input type="submit" value="ENVIAR">
             </form>
     </footer>
+    </center>
 </body>
 
 
