--- a/veterinaria/vet.html
+++ b/veterinaria/vet.html
@@ -103,7 +103,7 @@
         <section id="#equipo">
             <h2>Nuestro Equipo</h2>
                 <ul>
-                    <li>Rosa Espinosa - Jefa medica veterinaria</li>
+                    <li>Rosa Espinosa - Jefa medica veterinariia</li>
                     <li>Samuel Eto - Veterinario Asistente</li>
                     <li>Raul - Secretario</li>
                 </ul>
