--- a/veterinariamipets.html
+++ b/veterinariamipets.html
@@ -65,44 +65,51 @@
 
             <article>
                 <ul style="list-style-type:none;">
-                <li><dialog id="cirugia">
-                    <h2>Cirugia</h2>
-                    <img src="cirugia.jpg" width="200" height="200" alt="cirugia" />
-                    <p>Esterilización</p>
-                    <p>Traumatológica</p>
-                    <p>Oncológica</p>
-                    <button id="close" onclick="document.getElementById('cirugia').close()">Salir</button>
-                </dialog>
-                <button id="show" onclick="document.getElementById('cirugia').showModal()">Cirugia</button></li>
-                </ul>    
+                    <li>
+                        <dialog id="cirugia">
+                            <h2>Cirugia</h2>
+                            <img src="cirugia.jpg" width="200" height="200" alt="cirugia" />
+                            <p>Esterilización</p>
+                            <p>Traumatológica</p>
+                            <p>Oncológica</p>
+                            <button id="close" onclick="document.getElementById('cirugia').close()">Salir</button>
+                        </dialog>
+                        <button id="show" onclick="document.getElementById('cirugia').showModal()">Cirugia</button>
+                    </li>
+                </ul>
             </article>
 
             <article>
                 <ul style="list-style-type:none;">
-                <li><dialog id="laboratorio">
-                    <h2>Laboratorio</h2>
-                    <img src="laboratorio.avif" width="200" height="200" alt="laboratorio" />
-                    <p>Exámenes de sangre</p>
-                    <p>Biopsias</p>
-                    <p>Toma de muestras</p>
-                    <button id="close" onclick="document.getElementById('laboratorio').close()">Salir</button>
-                </dialog>
-                <button id="show" onclick="document.getElementById('laboratorio').showModal()">Laboratorio</button></li>
-                </ul>  
+                    <li>
+                        <dialog id="laboratorio">
+                            <h2>Laboratorio</h2>
+                            <img src="laboratorio.avif" width="200" height="200" alt="laboratorio" />
+                            <p>Exámenes de sangre</p>
+                            <p>Biopsias</p>
+                            <p>Toma de muestras</p>
+                            <button id="close" onclick="document.getElementById('laboratorio').close()">Salir</button>
+                        </dialog>
+                        <button id="show"
+                            onclick="document.getElementById('laboratorio').showModal()">Laboratorio</button>
+                    </li>
+                </ul>
             </article>
 
             <article>
                 <ul style="list-style-type:none;">
-                <li><dialog id="rx">
-                    <h2>Radiografía</h2>
-                    <img src="radiografia.jpg" width="200" height="200" alt="radiografia" />
-                    <p>Convencional</p>
-                    <p>Computarizada</p>
-                    <p>Digital</p>
-                    <button id="close" onclick="document.getElementById('rx').close()">Salir</button>
-                </dialog>
-                <button id="show" onclick="document.getElementById('rx').showModal()">Radiografía</button></li>
-                </ul>    
+                    <li>
+                        <dialog id="rx">
+                            <h2>Radiografía</h2>
+                            <img src="radiografia.jpg" width="200" height="200" alt="radiografia" />
+                            <p>Convencional</p>
+                            <p>Computarizada</p>
+                            <p>Digital</p>
+                            <button id="close" onclick="document.getElementById('rx').close()">Salir</button>
+                        </dialog>
+                        <button id="show" onclick="document.getElementById('rx').showModal()">Radiografía</button>
+                    </li>
+                </ul>
             </article>
 
 
