--- a/Pregunta3.html
+++ b/Pregunta3.html
@@ -75,12 +75,12 @@
                 <input type="text" id="nombre" name="nombre" required><br>
 
                 <label style="display: inline-block;width: 80px;" for="Correo electronico">Correo electronico:</label>
-                <input type="email" id="Correo electronico" name="nombre" required><br>
+                <input type="email" id="Correo electronico" name="email" required><br>
 
                 <label style="display: inline-block;width: 80px;" for="nombre">Numero de telefono</label>
-                <input type="tel" id="nombre" name="Numero de telefono" required><br>
+                <input type="tel" id="tel" name="Numero de telefono" required><br>
 
-                <label style="display: inline-block;width: 80px;" for="nombre">Seleciona un vehiculo</label>
+                <label style="display: inline-block;width: 80px;" for="sel vehiculo">Seleciona un vehiculo</label>
                 <select name="select">
                     <option value="Jetour x70 gls 2022">Jetour x70 gls 2022 1</option>
                     <option value="Audi A5 2021" selected>Audi A5 2021</option>
@@ -89,12 +89,12 @@
                 
 
                 <label style="display: inline-block;width: 80px;" for="nombre">Fecha de inicio de alquiler</label>
-                <input type="date" id="nombre" name="Fecha de inicio de alquiler" required><br>
+                <input type="date" id="fechaini" name="Fecha de inicio de alquiler" required><br>
 
                 <label style="display: inline-block;width: 80px;" for="nombre">Fecha de finalizacion de alquiler</label>
-                <input type="date" id="nombre" name="Fecha de finalizacion de alquiler"required><br>
+                <input type="date" id="fechafin" name="Fecha de finalizacion de alquiler"required><br>
 
-                <label style="display: inline-block;width: 80px;" for="nombre">Mensaje</label>
+                <label style="display: inline-block;width: 80px;" for="mensaje">Mensaje</label>
                 <textarea id="mensaje" name="mensaje"></textarea><br>
 
                 <input type="submit" value="Enviar">
