Prueba Front end

--- a/EVA_1/Pregunta3.html
+++ b/EVA_1/Pregunta3.html
@@ -77,7 +77,7 @@
             <h2>Contacto</h2>
             <details>
                 <summary>Ver Formulario de Contacto</summary>
-                <form style="">
+                <form>
                     <br>
                     <br>
                     <label for="nombre" style="display: inline-flex; width: 300px;">Nombre:</label>
